--- a/appengine/extending-runtime/package.json
+++ b/appengine/extending-runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appengine-extending-runtime",
-  "description": "Sample for extending the Google App Engine Managed VMs Node.js runtime",
+  "description": "Sample for extending the Google App Engine Flexible Environment Node.js runtime",
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
