--- a/appengine/twilio/package.json
+++ b/appengine/twilio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appengine-twilio",
-  "description": "Samples for Google App Engine Managed VMs",
+  "description": "Samples for Google App Engine Flexible Environment",
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
